deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-hackathon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-hackathon
  template:
    metadata:
      labels:
        app: azure-hackathon
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: azure-hackathon
        image: projectnodejs.azurecr.io/projectnodejs:master-27
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 128m
            memory: 128Mi
          limits:
            cpu: 256m
            memory: 256Mi
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: acrcred
       
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: hacathon-public
# spec:
#   type: LoadBalancer
#   ports:
#   - port: 80
#   selector:
#     app: azure-hackathon
# apiVersion: v1
# kind: Service
# metadata:
#   name: internal-app
#   annotations:
#     service.beta.kubernetes.io/azure-load-balancer-internal: "true"
# spec:
#   type: LoadBalancer
#   ports:
#   - port: 3000
#   selector:
#     app: azure-hackathon
apiVersion: v1
kind: Service
metadata:
  name: azure-hackathon
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: azure-hackathon
